Fix test issue due to unsufficient ram